# liquidbot

./: .gitignore  CLAUDE.md  README.md  TODO.md
bot/: .env.example  Cargo.toml  logs-command.md  protocols.json
bot/scripts/: new-release.sh
bot/src/: competitors.rs  config.rs  main.rs  protocols.rs  stats.rs  telegram.rs
contracts/: foundry.toml
contracts/broadcast/Deploy.s.sol/42161/: run-latest.json
contracts/script/: Deploy.s.sol  deploy-smart-contract.sh  stop-smart-contract.sh
contracts/src/: FlashLiquidator.sol
contracts/test/: FlashLiquidator.t.sol
docs/: ARCHITECTURE.md  systemd-setup.md
